# pre-commit-hooks

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/workflows/: python_ci_linux.yml  python_ci_macos.yml
pre_commit_hooks/: __init__.py  bind_requirements.py  check_docstring_first.py  requirements_txt_sorter.py
tests/: conftest.py  requirements.txt  test_bind_requirements.py  test_requirements_txt_sorter.py
tests/cassettes/: test_integration[bar_foo].json  test_integration[bar_foo_2].json  test_integration[bar_pkg-resources_foo].json  test_integration[comment_at_end].json  test_integration[comment_bar_comment_foo].json  test_integration[comment_barfoo_].json  test_integration[comment_foo_bar].json  test_integration[comment_foo_comment_bar].json  test_integration[foo_bar].json  test_integration[foo_bar_2].json  test_integration[foo_pkg-resources_bar].json  test_integration_min_py[py310].json  test_integration_min_py[py311].json  test_integration_min_py[py312].json  test_integration_min_py[py313].json  test_integration_min_py[py34].json  test_integration_min_py[py35].json  test_integration_min_py[py36].json  test_integration_min_py[py37].json  test_integration_min_py[py38].json  test_integration_min_py[py39].json
