[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pre-commit-hooks"
version = "0.5.0"
description = "Some useful hooks for pre-commit."
readme = "README.rst"
keywords = [ "pre-commit",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/pre-commit-hooks"
"Issue Tracker" = "https://github.com/domdfcoding/pre-commit-hooks/issues"
"Source Code" = "https://github.com/domdfcoding/pre-commit-hooks"

[project.scripts]
requirements-txt-sorter = "pre_commit_hooks.requirements_txt_sorter:main"
bind-requirements = "pre_commit_hooks.bind_requirements:main"
check-docstring-first = "pre_commit_hooks.check_docstring_first:main"

[tool.whey]
base-classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Topic :: Utilities",]
python-versions = [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pre_commit_hooks"

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
